update application.properties to connect to database in docker container with docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name = mediscreen-note
 
 #mongodb
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=note_mediscreen
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=note_mediscreen
+spring.data.mongodb.uri=mongodb://mymongodb:27017/note_mediscreen
 
 #logging
 logging.level.org.springframework.data=DEBUG
